changed localdb instance

--- a/LogInRegister/Web.config
+++ b/LogInRegister/Web.config
@@ -63,7 +63,7 @@
 	  
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="projectsv13" />
+        <parameter value="mssqllocaldb" />
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
